240523 - revert away from aws cognito

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,60 +1,60 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <title>Demo</title>
-    <meta name="description" content=""/>
-    <meta name="viewport" content="width=device-width"/>
-    <base href="/"/>
-    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css"/>
-    <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
-    <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="/webjars/js-cookie/js.cookie.js"></script>
-    <script type="text/javascript">
+<!--<!doctype html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="utf-8"/>-->
+<!--    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>-->
+<!--    <title>Demo</title>-->
+<!--    <meta name="description" content=""/>-->
+<!--    <meta name="viewport" content="width=device-width"/>-->
+<!--    <base href="/"/>-->
+<!--    <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css"/>-->
+<!--    <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>-->
+<!--    <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>-->
+<!--    <script type="text/javascript" src="/webjars/js-cookie/js.cookie.js"></script>-->
+<!--    <script type="text/javascript">-->
 
-        $(document).ready(function() {
-        // Fetch user data and update the UI
-        $.get("/user", function(data) {
-            if (data && data.name) {
-                $("#user").html(data.name);
-                $(".unauthenticated").hide();
-                $(".authenticated").show();
-            } else {
-                $(".unauthenticated").show();
-                $(".authenticated").hide();
-            }
-        }).fail(function() {
-            $(".unauthenticated").show();
-            $(".authenticated").hide();
-        });
+<!--        $(document).ready(function() {-->
+<!--        // Fetch user data and update the UI-->
+<!--        $.get("/user", function(data) {-->
+<!--            if (data && data.name) {-->
+<!--                $("#user").html(data.name);-->
+<!--                $(".unauthenticated").hide();-->
+<!--                $(".authenticated").show();-->
+<!--            } else {-->
+<!--                $(".unauthenticated").show();-->
+<!--                $(".authenticated").hide();-->
+<!--            }-->
+<!--        }).fail(function() {-->
+<!--            $(".unauthenticated").show();-->
+<!--            $(".authenticated").hide();-->
+<!--        });-->
 
 
-       $.get("/api/config", function(data) {
-            var logoutUrl = data.logoutUrl;
-            var logout = function() {
-            Cookies.remove("XSRF-TOKEN");
-            window.location.href = logoutUrl;
-            };
-            $("#logoutButton").click(logout);
-            });
-    });
+<!--       $.get("/api/config", function(data) {-->
+<!--            var logoutUrl = data.logoutUrl;-->
+<!--            var logout = function() {-->
+<!--            Cookies.remove("XSRF-TOKEN");-->
+<!--            window.location.href = logoutUrl;-->
+<!--            };-->
+<!--            $("#logoutButton").click(logout);-->
+<!--            });-->
+<!--    });-->
 
-        </script>
+<!--        </script>-->
 
-</head>
-<body>
-<h1>Demo</h1>
-<div class="container"></div>
-<div class="container unauthenticated">
-    With GitHub: <a href="/oauth2/authorization/github">click here</a>
-</div>
-<div class="container authenticated" style="display:none">
-    Logged in as: <span id="user"></span>
-</div>
-<div>
-    <button id="logoutButton" class="btn btn-primary">Logout</button>
-</div>
+<!--</head>-->
+<!--<body>-->
+<!--<h1>Demo</h1>-->
+<!--<div class="container"></div>-->
+<!--<div class="container unauthenticated">-->
+<!--    With GitHub: <a href="/oauth2/authorization/github">click here</a>-->
+<!--</div>-->
+<!--<div class="container authenticated" style="display:none">-->
+<!--    Logged in as: <span id="user"></span>-->
+<!--</div>-->
+<!--<div>-->
+<!--    <button id="logoutButton" class="btn btn-primary">Logout</button>-->
+<!--</div>-->
 
-</body>
-</html>
+<!--</body>-->
+<!--</html>-->
